# request_cli

./: .gitignore  Cargo.toml  example_requests.txt  requests.db
src/: database.rs  loader.rs  main.rs
